jena-shex/src/test/files/spec/negativeSyntax/prefix-no-uri.shex
# PREFIX without URI.
# source: turtle-syntax-bad-prefix-03.ttl
PREFIX ex:
